<?xml version="1.0"?>
<package>
  <name>RhAL</name>
  <version>0.0.0</version>
  <description>
    Starkit hardware abstraction library. You can use it to interract
    with the supported devices.
  </description>

  <maintainer email="qrouxel@labri.fr">Quentin Rouxel</maintainer>
  <maintainer email="rfabre@labri.fr">Rémi Fabre</maintainer>
  <maintainer email="gpassault@labri.fr">Grégoire Passault</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Starkit/RhAL</url>

  <author email="qrouxel@labri.fr">Quentin Rouxel</author>
  <author email="rfabre@labri.fr">Rémi Fabre</author>
  <author email="gpassault@labri.fr">Grégoire Passault</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>RhIOServer</build_depend> <!-- starkit/rhio -->
  <build_depend>jsoncpp</build_depend> <!-- starkit/jsoncpp -->
  <build_depend>serial</build_depend> <!-- starkit/serial -->
  <build_depend>tclap</build_depend> <!-- starkit/tclap -->
  <build_depend>eigen</build_depend> <!-- starkit/eigen -->
  <build_depend>eigen</build_depend> <!-- starkit/utils -->
  <build_depend>starkit_utils</build_depend> <!-- starkit/utils -->
  
  <run_depend>RhIOServer</run_depend>
  <run_depend>jsoncpp</run_depend>
  <run_depend>serial</run_depend>
  <run_depend>tclap</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>starkit_utils</run_depend>

</package>
